# proxmark3

./: compile.sh  pm3
client/: CMakeLists.txt
client/client_with_lua/: 00make_swig_lua.sh  CMakeLists.txt  testembedded.lua
client/client_with_py/: 00make_swig_py.sh  CMakeLists.txt  testembedded.py
client/client_with_swig/: 00make_swig.sh  02b_run_test_py.sh  CMakeLists.txt  libpm3.h  libpm3.i  testembedded.lua  testembedded.py
client/cmdscripts/: clone_hid.sh  detected_hid_cards  start_hid_scan.sh  stop_hid_scan.sh
client/include/: pm3.h  pm3.i
client/lib/: 01make_and_run_test.sh  01make_test.sh  02run_test.sh  CMakeLists.txt  test.c
client/lib/example_lua/: 02run_test.sh
client/lib/example_py/: 02run_test.sh
client/liblua/: 01link_lib.sh
client/libpy/: 00make_swig_py.sh  01link_lib.sh  01make_lib_py.sh  02run_test.sh  03run_test.sh  CMakeLists.txt  test.py
client/src/: cmdscript.c  comms.c  comms.h  libpm3.py  libpm3_luawrap.c  libpm3_pywrap.c  pm3.py  pm3_luawrap.c  pm3_pywrap.c  proxguiqt.cpp  proxmark3.c  proxmark3.h
